Added functionality for player

--- a/Space-Invaders/Space-Invaders.vcxproj
+++ b/Space-Invaders/Space-Invaders.vcxproj
@@ -135,27 +135,30 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="source\Event\EventService.cpp" />
-    <ClCompile Include="source\Gameplay\AnimationTest.cpp" />
-    <ClCompile Include="source\Gameplay\CollisionDetectionTest.cpp" />
-    <ClCompile Include="source\Gameplay\GameplayService.cpp" />
-    <ClCompile Include="source\Gameplay\SFMLTest.cpp" />
+    <ClCompile Include="source\Global\Config.cpp" />
     <ClCompile Include="source\Global\ServiceLocator.cpp" />
+    <ClCompile Include="source\Global\TimeService.cpp" />
     <ClCompile Include="source\Main\GameService.cpp" />
     <ClCompile Include="source\Main\GraphicService.cpp" />
+    <ClCompile Include="source\Player\PlayerController.cpp" />
+    <ClCompile Include="source\Player\PlayerModel.cpp" />
+    <ClCompile Include="source\Player\PlayerService.cpp" />
+    <ClCompile Include="source\Player\PlayerView.cpp" />
     <ClCompile Include="source\UI\MainMenu\MainMenuUIController.cpp" />
     <ClCompile Include="source\UI\SplashScreen\SplashScreenUIController.cpp" />
     <ClCompile Include="source\UI\UIService.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="header\Event\EventService.h" />
-    <ClInclude Include="header\Gameplay\AnimationTest.h" />
-    <ClInclude Include="header\Gameplay\CollisionDetectionTest.h" />
-    <ClInclude Include="header\Gameplay\GameplayService.h" />
-    <ClInclude Include="header\Gameplay\Interface\ITest.h" />
-    <ClInclude Include="header\Gameplay\SFMLTest.h" />
+    <ClInclude Include="header\Global\Config.h" />
     <ClInclude Include="header\Global\ServiceLocator.h" />
+    <ClInclude Include="header\Global\TimeService.h" />
     <ClInclude Include="header\Main\GameService.h" />
     <ClInclude Include="header\Main\GraphicService.h" />
+    <ClInclude Include="header\Player\PlayerController.h" />
+    <ClInclude Include="header\Player\PlayerModel.h" />
+    <ClInclude Include="header\Player\PlayerService.h" />
+    <ClInclude Include="header\Player\PlayerView.h" />
     <ClInclude Include="header\UI\Interface\IUIController.h" />
     <ClInclude Include="header\UI\MainMenu\MainMenuUIController.h" />
     <ClInclude Include="header\UI\SplashScreen\SplashScreenUIController.h" />
