Refactored the code

--- a/Space-Invaders/Space-Invaders.vcxproj
+++ b/Space-Invaders/Space-Invaders.vcxproj
@@ -141,7 +141,7 @@
     <ClCompile Include="source\Gameplay\SFMLTest.cpp" />
     <ClCompile Include="source\Global\ServiceLocator.cpp" />
     <ClCompile Include="source\Main\GameService.cpp" />
-    <ClCompile Include="source\Main\GraphicService.cpp" />
+    <ClCompile Include="source\Graphics\GraphicService.cpp" />
     <ClCompile Include="source\UI\MainMenu\MainMenuUIController.cpp" />
     <ClCompile Include="source\UI\SplashScreen\SplashScreenUIController.cpp" />
     <ClCompile Include="source\UI\UIService.cpp" />
@@ -151,12 +151,10 @@
     <ClInclude Include="header\Gameplay\AnimationTest.h" />
     <ClInclude Include="header\Gameplay\CollisionDetectionTest.h" />
     <ClInclude Include="header\Gameplay\GameplayService.h" />
-    <ClInclude Include="header\Gameplay\Interface\ITest.h" />
     <ClInclude Include="header\Gameplay\SFMLTest.h" />
     <ClInclude Include="header\Global\ServiceLocator.h" />
     <ClInclude Include="header\Main\GameService.h" />
-    <ClInclude Include="header\Main\GraphicService.h" />
-    <ClInclude Include="header\UI\Interface\IUIController.h" />
+    <ClInclude Include="header\Graphics\GraphicService.h" />
     <ClInclude Include="header\UI\MainMenu\MainMenuUIController.h" />
     <ClInclude Include="header\UI\SplashScreen\SplashScreenUIController.h" />
     <ClInclude Include="header\UI\UIService.h" />
