--- a/Space-Invaders/Space-Invaders.vcxproj
+++ b/Space-Invaders/Space-Invaders.vcxproj
@@ -159,6 +159,10 @@
     <ClCompile Include="source\Gameplay\GameplayView.cpp" />
     <ClCompile Include="source\Global\Config.cpp" />
     <ClCompile Include="source\Global\ServiceLocator.cpp" />
+    <ClCompile Include="source\Powerup\Controller\OutscalBombController.cpp" />
+    <ClCompile Include="source\Powerup\Controller\RapidFireController.cpp" />
+    <ClCompile Include="source\Powerup\Controller\ShieldController.cpp" />
+    <ClCompile Include="source\Powerup\Controller\TrippleLaserController.cpp" />
     <ClCompile Include="source\Powerup\PowerupController.cpp" />
     <ClCompile Include="source\Powerup\PowerupModel.cpp" />
     <ClCompile Include="source\Powerup\PowerupService.cpp" />
@@ -204,6 +208,10 @@
     <ClInclude Include="header\Gameplay\GameplayView.h" />
     <ClInclude Include="header\Global\Config.h" />
     <ClInclude Include="header\Global\ServiceLocator.h" />
+    <ClInclude Include="header\Powerup\Controller\OutscalBombController.h" />
+    <ClInclude Include="header\Powerup\Controller\RapidFireController.h" />
+    <ClInclude Include="header\Powerup\Controller\ShieldController.h" />
+    <ClInclude Include="header\Powerup\Controller\TrippleLaserController.h" />
     <ClInclude Include="header\Powerup\IPowerup.h" />
     <ClInclude Include="header\Powerup\PowerupConfig.h" />
     <ClInclude Include="header\Powerup\PowerupController.h" />
